test/classes/vass/def-with-type-binding-within-class/enclosing-class-error-1.good
enclosing-class-error-1.chpl:2: error: 'X' undeclared (first use this function)
enclosing-class-error-1.chpl:6: error: unresolved call 'A.fooA()'
